--- a/app/index.html
+++ b/app/index.html
@@ -23,4 +23,5 @@
     {{content-for "body-footer"}}
   </body>
   <script src="https://use.fontawesome.com/2b59555316.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Allerta+Stencil|Stardos+Stencil" rel="stylesheet">
 </html>
