--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Black Dog Surplus, Inc</title>
-    <meta name="description" content="">
+    <meta name="description" content="We provide customized freeze dried Rations and Meals Ready to Eat for emergency personnel, civilian emergency agencies and military usage.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
