home page updated to new edition

--- a/app/index.html
+++ b/app/index.html
@@ -24,4 +24,5 @@
   </body>
   <script src="https://use.fontawesome.com/2b59555316.js"></script>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
 </html>
