--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Black Dog Surplus, Inc</title>
+    <title>Black Dog Surplus, Inc: MRE's and Other Solutions According to Your Needs!</title>
     <meta name="description" content="We provide customized freeze dried Rations and Meals Ready to Eat for emergency personnel, civilian emergency agencies and military usage.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
