--- a/app/index.html
+++ b/app/index.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="{{rootURL}}assets/main-site.css">
 
     {{content-for "head-footer"}}
-    
+
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
-    <script src="https://use.fontawesome.com/2b59555316.js"></script>
+    <link rel="icon" href="/img/home-logo.png" type="image/x-icon"/>
   </head>
   <body>
     {{content-for "body"}}
@@ -24,8 +24,10 @@
     <script src="{{rootURL}}assets/main-site.js"></script>
 
     {{content-for "body-footer"}}
-    
+
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+
+    <script src="https://use.fontawesome.com/2b59555316.js"></script>
   </body>
 </html>
